Support graphql-ruby 1.10

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ rvm:
 gemfile:
   - gemfiles/graphql_1_8.gemfile
   - gemfiles/graphql_1_9.gemfile
+  - gemfiles/graphql_1_10.gemfile
   - gemfiles/graphql_master.gemfile
 
 
@@ -21,3 +22,5 @@ notifications:
 
 matrix:
   fast_finish: true
+  allow_failures:
+    - rvm: ruby-head
