--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.3, 2.4, 2.5, 2.6, 2.7]
+        ruby: [2.5, 2.6, 2.7]
         gemfile: [
           "gemfiles/graphql_1_10.gemfile",
           "gemfiles/graphql_1_11.gemfile",
