--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,12 +18,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.5, 2.6, 2.7]
+        ruby: [2.6, 2.7, 3.0]
         gemfile: [
           "gemfiles/graphql_1_10.gemfile",
           "gemfiles/graphql_1_11.gemfile",
           "gemfiles/graphql_1_12_0.gemfile",
           "gemfiles/graphql_1_12_4.gemfile",
+          "gemfiles/graphql_1_13_7.gemfile",
           "gemfiles/graphql_master.gemfile"
         ]
 
