Add graphql-ruby 2.0.0 to CI

--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -25,6 +25,7 @@ jobs:
           "gemfiles/graphql_1_12_0.gemfile",
           "gemfiles/graphql_1_12_4.gemfile",
           "gemfiles/graphql_1_13_7.gemfile",
+          "gemfiles/graphql_2_0_0.gemfile",
           "gemfiles/graphql_master.gemfile"
         ]
 
