--- a/.github/workflows/rubocop.yml
+++ b/.github/workflows/rubocop.yml
@@ -17,5 +17,5 @@ jobs:
         ruby-version: 2.7
     - name: Lint Ruby code with RuboCop
       run: |
-        bundle install --gemfile gemfiles/graphql_1_10.gemfile --jobs 4 --retry 3
-        bundle exec --gemfile gemfiles/graphql_1_10.gemfile rubocop
+        bundle install --gemfile gemfiles/graphql_1_12_0.gemfile --jobs 4 --retry 3
+        bundle exec --gemfile gemfiles/graphql_1_12_0.gemfile rubocop
