--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.6, 2.7, 3.0]
+        ruby: [2.7, '3.0', 3.1]
         gemfile: [
           "gemfiles/graphql_1_12_0.gemfile",
           "gemfiles/graphql_1_12_4.gemfile",
