--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,13 +18,14 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [2.7, '3.0', 3.1, 3.2]
+        ruby: [2.7, '3.0', 3.1, 3.2, 3.3]
         gemfile: [
           "gemfiles/graphql_1_12_0.gemfile",
           "gemfiles/graphql_1_12_4.gemfile",
           "gemfiles/graphql_1_13_7.gemfile",
           "gemfiles/graphql_1_13_16.gemfile",
-          "gemfiles/graphql_2_0_0.gemfile",
+          "gemfiles/graphql_2_1_0.gemfile",
+          "gemfiles/graphql_2_2_5.gemfile",
           "gemfiles/graphql_master.gemfile"
         ]
 
