--- a/.github/workflows/rspec.yml
+++ b/.github/workflows/rspec.yml
@@ -18,7 +18,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        ruby: [3.1, 3.2, 3.3]
+        ruby: [3.1, 3.2, 3.3, 3.4]
         gemfile: [
           "gemfiles/graphql_2_1_0.gemfile",
           "gemfiles/graphql_2_2_5.gemfile",
